--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1 class="header">Drum Kit</h1>
-    </header>
-    <main class="main">
-      <div class="main-frame"><div class="keypad" id="keypad"></div></div>
-      <div id="audio"></div>
-    </main>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Drum Kit</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <h1 class="heading">Drum Kit</h1>
+    <h2 class="mobile-heading">It appears you are using a Mobile Device. Consider using a Desktop PC to play tones on this Page.</h2>
+  </header>
+  <main class="main">
+    <div class="main-frame">
+      <div class="keypad" id="keypad"></div>
+    </div>
+    <div id="audio"></div>
+  </main>
   <script src="main.js"></script>
+
+</body>
+
 </html>
